bug/271 add line breaks for KR/Objective/Check-in (#516)
* add line breaks on \n

* add correct linebreak not to every element

* Implement missing linebreaks

* Remove class in styles.scss

* Replace unnecessary custom BT class and replace it's references

* Remove position absolute

* revert change

* Change location of prevantDefaultEvent

* [FM] Automated formating frontend

---------

--- a/frontend/src/style/custom_bootstrap.scss
+++ b/frontend/src/style/custom_bootstrap.scss
@@ -7,7 +7,3 @@ $theme-colors: (
   "error": $error,
 );
 @import "bootstrap";
-
-.r-0 {
-  right: 0;
-}
